[package]
name = "pible"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd"] }
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
uuid = "1.19.0"

# Dependencies for keys
aes-gcm = "0.10.3"
base64 = "0.22.1"
blake3 = "1.8.2"


[[bin]]
name = "member"
path = "src/member/main.rs"

[[bin]]
name = "client"
path = "src/control/main.rs"
